.metadata/.plugins/org.eclipse.cdt.ui/led_first.build.log
11:56:12 **** Incremental Build of configuration Debug for project led_first ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:100:36: error: 'GPIO_Pin_12' undeclared (first use in this function); did you mean 'GPIO_PIN_12'?
  100 |           HAL_GPIO_WritePin(GPIOD, GPIO_Pin_12,1);
      |                                    ^~~~~~~~~~~
      |                                    GPIO_PIN_12
../Core/Src/main.c:100:36: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

11:56:14 Build Failed. 2 errors, 0 warnings. (took 1s.600ms)

